# Atividade-Sistemas-Inteligente

./: README.md  pyproject.toml
avaliacao2/.ipynb_checkpoints/: sis-int-ativ-2-guilhermeduartesousa-checkpoint.ipynb
